The chat is no longer visible by default unless opened & chat fades out.

--- a/server-data/resources/[chat]/improved-chat/html/index.css
+++ b/server-data/resources/[chat]/improved-chat/html/index.css
@@ -34,11 +34,6 @@ html, body {
   align-items: center; /* align vertical */
 }
 
-#form {
-  width: 100%;
-  height: 100%;
-}
-
 #input {
   color: rgba(255, 255, 255, 1.0);
   background: none;
